--- a/EShopping/EShopping/Web.config
+++ b/EShopping/EShopping/Web.config
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-EShopping-20180719015830.mdf;Initial Catalog=aspnet-EShopping-20180719015830;Integrated Security=True" providerName="System.Data.SqlClient" />
-  
-  <add name="ElectricStoreEntities" connectionString="metadata=res://*/Models.ElectricStore.csdl|res://*/Models.ElectricStore.ssdl|res://*/Models.ElectricStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ElectricStore;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-EShopping-20180719015830.mdf;Initial Catalog=aspnet-EShopping-20180719015830;Integrated Security=True" providerName="System.Data.SqlClient" />--> 
+<add name="ElectricStoreEntities" connectionString="metadata=res://*/Models.ElectricStore.csdl|res://*/Models.ElectricStore.ssdl|res://*/Models.ElectricStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ElectricStore;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
